[gd_scene load_steps=3 format=3 uid="uid://bc8y71yksypu4"]

[ext_resource type="Script" path="res://addons/gengodot/gengodot_script.gd" id="1_c8bnl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jsy6p"]

[node name="Gengodot" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14
script = ExtResource("1_c8bnl")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 2

[node name="CategoryOptionButton" type="OptionButton" parent="VBox/ButtonsHBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="SpacerLeft" type="VSeparator" parent="VBox/ButtonsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_jsy6p")

[node name="LoadLocalizationButton" type="Button" parent="VBox/ButtonsHBox"]
layout_mode = 2
text = "Load Localization"

[node name="SpacerRight" type="VSeparator" parent="VBox/ButtonsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_jsy6p")

[node name="GeneratePOTButton" type="Button" parent="VBox/ButtonsHBox"]
layout_mode = 2
text = "Generate POT"

[node name="GenerateMOButton" type="Button" parent="VBox/ButtonsHBox"]
layout_mode = 2
text = "Generate MO files"

[node name="VBox" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderHBox" type="HBoxContainer" parent="VBox/VBox"]
layout_mode = 2

[node name="ContextLabel" type="Label" parent="VBox/VBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "String context"

[node name="IDLabel" type="Label" parent="VBox/VBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Localization ID"

[node name="SecondLanguageOptionButton" type="OptionButton" parent="VBox/VBox/HeaderHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Divider" type="HSeparator" parent="VBox/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LocalizationVBox" type="VBoxContainer" parent="VBox/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBox/ButtonsHBox/LoadLocalizationButton" to="." method="_on_load_localization_button_pressed"]
[connection signal="pressed" from="VBox/ButtonsHBox/GeneratePOTButton" to="." method="_on_generate_pot_button_pressed"]
[connection signal="pressed" from="VBox/ButtonsHBox/GenerateMOButton" to="." method="_on_generate_mo_button_pressed"]
